--- a/pom.xml
+++ b/pom.xml
@@ -4,10 +4,10 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>com.etycx.marry</groupId>
-    <artifactId>marry</artifactId>
+    <groupId>com.etycx.exam</groupId>
+    <artifactId>exam</artifactId>
     <version>1.0-SNAPSHOT</version>
-    <packaging>war</packaging>
+    <packaging>exam</packaging>
 
     <name>marry</name>
     <inceptionYear>2018-2019</inceptionYear>
