--- a/src/main/resources/marry.properties
+++ b/src/main/resources/marry.properties
@@ -1,6 +1,6 @@
 jdbc.type=mysql
 jdbc.driver=com.mysql.jdbc.Driver
-jdbc.url=jdbc:mysql://123.56.15.166:3306/etycx-examination?useUnicode=true&characterEncoding=utf-8
+jdbc.url=jdbc:mysql://localhost:3306/etycx-examination?useUnicode=true&characterEncoding=utf-8
 jdbc.username=root
 jdbc.password=pwd666
 
